[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0.80", features = ["derive"] }
regex = "1.5.4"
js-sys = { version = "0.3.56" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]